--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@
 #
 # See https://docs.rubocop.org/rubocop/configuration
 
+Metrics/MethodLength:
+  Max: 15
+
 AllCops:
   Exclude: 
   - 'db/schema.rb'
